--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,3 +7,46 @@ lilas  #5f2c82
 
 
 */
+
+* {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body, html {
+    background-color: #5f2c82;
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate( -50%, -50%);
+    overflow: hidden;
+
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px rgba(0, 0, 0, 0.808);
+}
+section#login >div#imagem {
+    display: block;
+    background: #5f2c82 url(../imagens/fundo.jpg);
+    background-size: cover;
+    background-position: left bottom;
+    height: 200px;
+}
+section#login > div#formulario {
+    display: block;
+    padding: 10px;
+}
